	PR target/12598 	* config/cris/cris.md (define_split "*mov_sidesi_biap_mem"+1) 	(define_splits "*mov_sidesi_mem"+1, "casesi"+9, +10, +11, +12): 	Use cris_mem_op and replace_equiv_address, not gen_rtx_MEM. 	("call", "call_value", define_split "*mov_sidesi_mem"+19, +20) 	(define_split "*mov_sidesi_mem"+21, +22, +23, +24, +25, +26, +27) 	(define_split "*mov_sidesi_mem"+28, +29, +30): Use 	replace_equiv_address, not gen_rtx_MEM. 	* config/cris/cris.c (cris_mem_op): New match_operator function. 	* config/cris/cris.h (PREDICATE_CODES): Add cris_mem_op.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@72521 138bc75d-0d04-0410-961f-82ee72b054a4